[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpdb-3"
version = "3.0.0-alpha2"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiohttp==3.10.5",
    "beautifulsoup4==4.12.3",
    "chardet==5.2.0",
    "fastapi==0.111.0",
    "Flask==3.0.3",
    "future==1.0.0",
    "matplotlib==3.9.0",
    "mplfinance==0.12.10b0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pydantic==2.7.4",
    "pytest==8.3.2",
    "pytz==2024.1",
    "qt-material==2.14",
    "SQLAlchemy==1.4.46",
    "uvicorn==0.30.1",
    "xlrd==2.0.1",
    "pyzmq==26.0.3",
    "cachetools==5.5.0",
    "colorlog==6.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-qt>=4.0.2",
    "pytest-cov>=5.0.0",
    "PyQt5==5.15.6",
]
build = ["pyinstaller>=6.9.0", "wheel>=0.42.0"]
build-linux = ["python-appimage==1.2.7"]
windows = ["pywin32==306", "configparser", "PyQt5==5.15.6"]
linux = ["xcffib==1.5.0", "PyQt5==5.15.6"]
macos = ["pyobjc==10.3.1"]
mysql = ["mysqlclient==2.2.4"]
postgresql = ["psycopg2-binary==2.9.9"]

[tool.ruff]
extend-include = ["*.pyw"]
extend-exclude = ["build", "archives"]
# Lines configuration
line-length = 120
indent-width = 4

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = [
    "E401", # Multiple imports on one line"
    "E731", # Do not assign a `lambda` expression, use a `def`
    "E713", # Test for membership should be `not in`
]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["E712"]  # Allow explicit True/False comparisons in tests
"test_*.py" = ["E712"]  # Allow explicit True/False comparisons in test files

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = [
    "gfx",
    "web",
    "fonts",
    "hooks",
    "icons",
    "locale",
    "archives",
    "resources",
    "documentations",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/test/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*",
    "*/archives/*",
    "*/regression-test-files/*",
    "*/pypoker-eval/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
