[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpdb-3"
version = "3.0.0-alpha2"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiohttp==3.10.5",
    "beautifulsoup4==4.12.3",
    "chardet==5.2.0",
    "fastapi==0.111.0",
    "Flask==3.0.3",
    "future==1.0.0",
    "matplotlib==3.9.0",
    "mplfinance==0.12.10b0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pydantic==2.7.4",
    "pytest==8.3.2",
    "pytz==2024.1",
    "qt-material==2.14",
    "SQLAlchemy==1.4.46",
    "uvicorn==0.30.1",
    "xlrd==2.0.1",
    "pyzmq==26.0.3",
    "cachetools==5.5.0",
    "colorlog==6.9.0",
    "pytest-qt>=4.4.0",
    "sphinx>=7.4.7",
    "furo>=2025.7.19",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=2.3.0",

]

[project.optional-dependencies]
docs = [
    "sphinx<8.0",
    "furo",
    "myst-parser",
    "sphinx-autodoc-typehints",
]
test = [
    "pytest>=8.3.2",
    "pytest-qt>=4.0.2",
    "pytest-cov>=5.0.0",
    "PyQt5==5.15.11",
    "ruff>=0.12.8",
    "syrupy>=4.0.0",
    "hypothesis>=6.0.0",
]
test-no-pyqt = [
    "pytest>=8.3.2",
    "pytest-qt>=4.0.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.8",
    "syrupy>=4.0.0",
    "hypothesis>=6.0.0",
]
build = ["pyinstaller>=6.9.0", "wheel>=0.42.0"]
build-linux = ["python-appimage==1.2.7"]
windows = ["pywin32==306", "configparser", "PyQt5==5.15.11"]
linux = ["xcffib==1.5.0", "PyQt5==5.15.11"]
macos = ["pyobjc==10.3.1", "PyQt5==5.15.11"]
mysql = ["mysqlclient==2.2.4"]
postgresql = ["psycopg2-binary==2.9.9"]

[tool.ruff]
extend-include = ["*.pyw"]
extend-exclude = ["build", "archives", "documentations/notebook"]
line-length = 120
indent-width = 4

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.ruff.lint]
# Essential checks only: pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP)
select = ["E", "F", "I", "UP", "W"]
ignore = [
    "E401",  # Multiple imports on one line - sometimes necessary for legacy code
    "E731",  # Assign lambda - common pattern in callbacks
    "E713",  # Use 'not in' - can be stylistic choice
]

# Style des doc-strings (déplacé ici pour éviter l’avertissement de dépréciation)
[tool.ruff.lint.pydocstyle]
convention = "google"

# Tolérances spécifiques aux tests
[tool.ruff.lint.per-file-ignores]
"test/*.py"  = ["E712", "S101", "SLF001", "PLR2004"]
"test_*.py"  = ["E712", "S101", "SLF001", "PLR2004"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = [
    "gfx",
    "web",
    "fonts",
    "hooks",
    "icons",
    "locale",
    "archives",
    "resources",
    "documentations",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/test/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*",
    "*/archives/*",
    "*/regression-test-files/*",
    "*/pypoker-eval/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
]
